--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 9.7.4
+-------------
+    * Binaries now statically linked again
+
 Version 9.7.3
 -------------
     * Update lucidity metrics when marking worker as unhealthy
