--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 9.7.5
+-------------
+    * Binaries now statically linked again, hopefully for real this time
+
 Version 9.7.4
 -------------
     * Binaries now statically linked again
