--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 9.7.7
+-------------
+    * Compute metrics at collection time.
+
 Version 9.7.6
 -------------
     * Fixing immediate_shutdown flag
