Update cloud-storage package to retry bucket access (#183)
* Bump version of cloud-storage.

* Use retry logic from underlying storage client.

* Fix go.mod by updating remote-api-sdk

* Bump version to 9.8.0.

Co-authored-by: Peter Ebden <peter.ebden@gmail.com>
Co-authored-by: maxime <maxime@thoughtmachine.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Version 9.8.0
+-------------
+    * Add version labels to blob not found metric
+    * Devendorise pubsub
+    * Deadline extension on Pub/Sub queues performed immediately
+    * Update gRPC package to 1.48
+    * Update cloud-storage to 1.25
+
 Version 9.7.11
 -------------
     * Fixing deadlocks in Purity
