--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 9.8.2
+-------------
+    * Add return with connection error to grpc dial 
+
 Version 9.8.1
 -------------
     * Add logging on worker shutdown and shutting down queues
