--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Version 9.8.2
 -------------
-    * Add return with connection error to grpc dial 
+    * Add option return with connection error to grpc dial 
 
 Version 9.8.1
 -------------
