--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 9.10.0
+-------------
+	* Update google-cloud-go to 0.104.0
+
 Version 9.9.0
 -------------
     * Pushed metrics now include the worker name as a label.
