--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
-Version 9.9.4
+Version 10.0.0
 -------------
-    * Restructure Purity so that it deletes action results before marking
-	their blobs as live.
+    * Restructure Purity so that it deletes action results before
+      marking their blobs as live.
 	* Add cache prefix field to purity action results proto
 	* Add cache prefix field to purity blobs proto
 	* Elan List() returns blobs with cache preflix field populated 
