Delete action results before marking blobs in purity run (#201)
* Delete action results before referencing blobs

* continue on errors

* adding prefix to purity proto

* clean up parallelism

* generate proto pbs

* add prefix back to delete request

* delete action results in parallel

* Change log level and bump version

* return err instead of logging

* Correcting changelog

Co-authored-by: Hamish Pitkeathly <hpitkeathly@hpitkeathly-tm05452.lon.thomac.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Version 10.0.0
+-------------
+    * Restructure Purity so that it deletes action results before
+      marking their blobs as live.
+	* Add cache prefix field to purity action results proto
+	* Add cache prefix field to purity blobs proto
+	* Elan List() returns blobs with cache preflix field populated 
+
 Version 9.9.4
 -------------
     * Return blob not found error from elan gc delete.
