--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 10.2.0
+    * Add timeouts to Elan's remote client
+    * Add metrics to Elan's remote client
+
 Version 10.1.0
 -------------
     * Remove blob not found error from elan gc
