--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 10.3.3
+-------------
+    * Use workers name as a job label when pushing metrics to the gateway
 Version 10.3.2
 -------------
     * Add workers name label to the blobNotFoundErrors counter
