--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,20 @@
+Version 10.3.4
+-------------
+    * Returns DeadlineExceeded gRPC status code on action timeouts as required by
+      the specification.
+
 Version 10.3.3
 -------------
     * Use workers name as a job label when pushing metrics to the gateway
+
 Version 10.3.2
 -------------
     * Add workers name label to the blobNotFoundErrors counter
+
 Version 10.3.1
 -------------
     * Fix metric cardinality
+
 Version 10.3.0
 -------------
     * Only return delete errors in Elans gc
