--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Version 10.3.4
 -------------
+    * Add some error logging to flair when failing to perform some actions.
+    * Added some debug level logging to elan to aid with debugging.
+    * Increase grace period for shutdowns in mettle and handle nack and acks correctly
     * Returns DeadlineExceeded gRPC status code on action timeouts as required by
       the specification.
 
