--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 10.3.7
+-------------
+    * Add time to complete and total successful actions metrics to mettle api server
+    * Add total nacked messages to worker
+    * reduce logging by flair, purity, worker and elan
+
 Version 10.3.6
 -------------
     * Mark action digests in cas, purity.
