--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Version 10.3.7
 -------------
     * Add time to complete and total successful actions metrics to mettle api server
     * Add total nacked messages to worker
-    * reduce logging by flair, purity, worker and elan
+    * Reduce logging by flair, purity, worker and elan
 
 Version 10.3.6
 -------------
