--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 10.3.8
+-------------
+    * Remove worker name label from prometheus metrics
+
 Version 10.3.7
 -------------
     * Add time to complete and total successful actions metrics to mettle api server
