--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 10.3.9
+-------------
+    * Use a tighter timeout when reading on Redis.
+
 Version 10.3.8
 -------------
     * Remove worker name label from prometheus metrics
