--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 10.4.0
+-------------
+    * Allow using read replicas with Redis client.
+
 Version 10.3.9
 -------------
     * Use a tighter timeout when reading on Redis.
