--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 10.7.0
+--------------
+    * Compression alterations to move more inline with upstream (part the first)
+
 Version 10.6.1
 -------------
     * Write the boolean logic for the missing blob check in Zeal correctly
