--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.0.0-beta.2
+--------------
+    * Stop deleting directory blobs when they are referenced in purity.
+
 Version 11.0.0-beta.1
 --------------
     * Brought protocol in line with upstream's batch compression.
