--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.0.1
+--------------
+    * Restored previous permissive behaviour about symlinks pointing outside their directory
+
 Version 11.0.0
 --------------
     * Updated to latest REAPI, especially for batch compression protocol
