--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.0.5
+--------------
+    * Adding env keys to opts structs
+
 Version 11.0.4
 --------------
     * Fixing bug in bytestream upload offset check (#246)
