--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.1.0
+--------------
+    * Add configurable number of pub/sub pollers, default to 10
+
 Version 11.0.8
 --------------
     * renaming 'instance' label to something less generic
