--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 11.3.0
+--------------
+    * Add a way to specify the batch size for the response subscription in
+      Mettle API
+
 Version 11.2.2
 --------------
     * Correctly initialise Prometheus Vector metrics
