--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Version 11.3.0
 --------------
+    * Add api server pubsub opts 
+	* Add metrics for failed publish requests
+	* Add no execution in progress metric
+
+Version 11.3.0
+--------------
     * Add a way to specify the batch size for the response subscription in
       Mettle API
 
