--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,12 @@ Version 11.4.0
 
 Version 11.3.0
 --------------
+    * Add api server pubsub opts 
+	* Add metrics for failed publish requests
+	* Add no execution in progress metric
+
+Version 11.3.0
+--------------
     * Add a way to specify the batch size for the response subscription in
       Mettle API
 
