Fix bug in api server

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-Version 11.4.1
+Version 11.4.2
+--------------
+    * Fix bug in api server 
+
+Version 11.4.2
 --------------
     * Fix bug in api server 
 
