--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.6.2
+--------------
+    * Error token bucket was mistakenly consuming with `Allow()`. Refactored to make token bucket behaviour correct.
+
 Version 11.6.1
 --------------
     * Randomly offset retentionTime and expiryTime for each job so the
