--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 11.7.0
+--------------
+    * Update to Go 1.21
+    * Add support for Google Cloud Profiler
+
 Version 11.6.3
 --------------
     * Start receiving from queue only once we got all inflight executions.
