--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.7.2
+--------------
+    * Lower case the service names for the GCP Cloud Profiler to work
+
 Version 11.7.1
 --------------
     * Use the correct commit of the forked SDK
