Increase timeout for UploadIfMissing

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 11.7.3
+--------------
+    * Bump timeout for uploadIfMissing to handle actions with large output
+	files
+
 Version 11.7.2
 --------------
     * Lower case the service names for the GCP Cloud Profiler to work
