--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.7.4
+--------------
+    * Set limiter before context in elan client
+
 Version 11.7.3
 --------------
     * Bump timeout for uploadIfMissing to handle actions with large output
