--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.8.4
+--------------
+    * delete in memory jobs periodically in one routine 
+
 Version 11.7.4
 --------------
     * Set limiter before context in elan client
