--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.9.1
+--------------
+    * Don't set lastUpdate on streaming events 
+
 Version 11.9.0
 --------------
     * Revert job deletion change to match previous behaviour
