Improve comments and Changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Version 11.9.1
 --------------
-    * Don't set lastUpdate on streaming events 
+    * Delete done jobs after resuption time has passed
+	* Delete any job after 2x expiry 
+	* Don't set lastUpdate on streaming events 
+	* Add warning logs when deleting jobs with listeners
 
 Version 11.9.0
 --------------
