Ensure done jobs get deleted periodically  (#289)
* Don't set lastUpdate when streaming events

* Fix tests

* Delete completed jobs after expiry time regardless of whether they have listeners or not

* delete done jobs with listeners after resuption time

* Ensure created jobs done is set to false

* Improve comments and Changelog

* Clean up tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 11.9.1
+--------------
+    * Delete done jobs after resuption time has passed
+	* Delete any job after 2x expiry 
+	* Don't set lastUpdate on streaming events 
+	* Add warning logs when deleting jobs with listeners
+
 Version 11.9.0
 --------------
     * Revert job deletion change to match previous behaviour
