--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.9.2
+--------------
+    * Only clear J.current if we reuse an old job
+
 Version 11.9.1
 --------------
     * Delete done jobs after resuption time has passed
