--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 11.9.6
+--------------
+    * Refactor of redis client initialisation so it's easier to add new
+      options.
+    * Add option to set connection pool size in redis clients.
+
 Version 11.9.5
 --------------
     * Register new redis_latency_ms metrics so it can be scraped.
