--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.9.8
+--------------
+    * Allow specifying redis timeout through flags/environment.
+
 Version 11.9.7
 --------------
     * Do not use redis clients when no URL is provided.
