--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.9.10
+--------------
+    * Fix BatchRead that returns the wrong number of blobs.
+
 Version 11.9.9
 --------------
     * Read from redis only blob size is below limit (and could be found in
