--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.9.12
+--------------
+    * Make BatchDownload honour maxSize when uploading to redis.
+
 Version 11.9.11
 --------------
     * Allow setting pool timeout on redis client.
