--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 11.10.2
+--------------
+    * Add some tests to redis limiter.
+    * Don't take into account context canceled in limiter.
+    * Add option to set mininum number of idle connections to redis.
+    * Prevent limiter from counting its own errors towards rate limit.
+
 Version 11.10.1
 --------------
     * Stop printing warnings when we get redis.Nil errors.
