--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.10.5
+---------------
+    * Populate partial ExecutedActionMetadata messages during execution
+
 Version 11.10.4
 --------------
     * Check caches in the correct order.
