--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.14.0
+---------------
+    * Apply the limiter only for accessing large objects.
+
 Version 11.13.1
 ---------------
     * Reduce log level for action execution requests to `Debug`.
