--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 11.15.0
+---------------
+    * Use logrus library for structured logs when they contain hashes (#330)
+
 Version 11.14.0
 ---------------
     * Apply the limiter only for accessing large objects.
